k8s/message-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: message
  labels:
    app: message
spec:
  replicas: 3
  selector:
    matchLabels:
      app: message
  template:
    metadata:
      labels:
        app: message
    spec:
      containers:
      - name: message
        image: vincentramaputra/viscord-message-service:sha-67f3beb
        ports:
        - containerPort: 3000
          name: http
