k8s/message-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: message
  labels:
    app: message
spec:
  selector:
    app: message
  ports:
  - protocol: TCP
    port: 3000
    targetPort: http
